--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,10 @@ html, body, .container, #sidebar, #mapContainer {
   z-index: 1;
 }
 
+#legendbar, #modalButton {
+  padding-top: 10px;
+}
+
 /* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
@@ -104,7 +108,6 @@ html, body, .container, #sidebar, #mapContainer {
   text-decoration: none;
   cursor: pointer;
 }
-
 
 /* Tooltip container */
 .tooltip {
