--- a/css/styles.css
+++ b/css/styles.css
@@ -81,13 +81,6 @@ html, body, .container, #sidebar, #mapContainer {
   top: 70px;
 }
 
-
-.row2:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
 /* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
@@ -104,16 +97,16 @@ html, body, .container, #sidebar, #mapContainer {
 
 /* Modal Content/Box */
 .modal-content {
-  background-color: #fefefe;
+  background-color: #efefef;
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
-  border: 1px solid #888;
+  border: 3px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
 .close {
-  color: #aaa;
+  color: #slategrey;
   float: right;
   font-size: 28px;
   font-weight: bold;
@@ -124,8 +117,4 @@ html, body, .container, #sidebar, #mapContainer {
   color: black;
   text-decoration: none;
   cursor: pointer;
-}
-
-#qmark {
-  font-size: 0.2rem;
 }
