--- a/css/styles.css
+++ b/css/styles.css
@@ -26,46 +26,13 @@ html, body, .container, #sidebar, #mapContainer {
   flex-grow: 1;
 }
 
-.colorDots {
-  width: 20px;
-  border-radius: 50%;
-  height: 20px;
-  margin-right: 10px;
-  margin-left: 20px
-}
-
-#a {
-  background: #ffffff;
-  margin-bottom: 10px;
-}
-
-#b {
-  background: #c77dff;
-}
-
-#c {
-  background: #9d4edd;
-}
-
-#d {
-  background: #7b2cbf;
-}
-
-#e {
-  background: #5a189a;
-}
-
-#f {
-  background: #3c096c;
-}
-
 .legend {
   display: flex;
   right: 10px;
   z-index: 1;
 }
 
-#legendbar, #modalButton {
+#modalButton {
   padding-top: 10px;
 }
 
@@ -129,4 +96,49 @@ html, body, .container, #sidebar, #mapContainer {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+#legend-container {
+  position:absolute;
+  flex-grow: 1;
+  padding: 10px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, .5);
+  line-height: 18px;
+  height: 100px;
+  width: 300px;
+  right: 30px;
+  bottom: 30px;
+  background-color:  rgba(255,255,255,0.9);
+}
+
+.color-container {
+  margin-top: 4px;
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  margin-bottom: 15px;
+  font-weight:400;
+  font-size: 14px;
+}
+
+.color-code {
+  display:flex;
+  margin: 10px;
+}
+
+.legend-head {
+  font-family: "math", sans-serif;
+  text-align: center;
+  font-size: 16px;
+}
+
+.colors {
+  width: 100%;
+  height: 30px;
+}
+
+#c1 {
+  height: 23px;
+  background-color: red; /* For browsers that do not support gradients */
+  background-image: linear-gradient(to right, white, #c77dff, #9d4edd, #7b2cbf, #5a189a, #3c096c);
 }
